--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node":"14.x"
+  },
   "scripts": {
-    "start": "nodemon ./src/index.ts",
+    "build":"tsc",
+    "start":"node ./dist/index.js",
+    "start-dev": "nodemon ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Diego Dutra Morais",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
