--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build":"tsc",
-    "start":"node ./dist/index.js",
+    "start":"node dist/index.js",
     "start-dev": "nodemon ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
