--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
     "version":2,
     "builds":[{
-        "src":"./dist/index.js",
+        "src":"src/index.ts",
         "use":"@vercel/node"
     }],
     "routes":[{
-        "src":"/(.*)",
-        "dest":"/"
+        "src":"(.*)",
+        "dest":"src/index.ts"
     }]
 }
