--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,17 @@
 {
-    "version":2,
-    "builds":[{
-        "src":"src/index.ts",
-        "use":"@vercel/node"
-    }],
-    "routes":[{
-        "src":"(.*)",
-        "dest":"src/index.ts"
-    }]
+"version": 2,
+"builds": [
+  {
+    "src": "src/index.ts",
+    "use": "@vercel/node"
+  }
+],
+"routes": [
+  {
+    "src": "/(.*)",
+    "dest": "/src/index.ts"
+  }
+],"env": {
+  "PORT": "3000"
+}
 }
