--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "api-projects",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "engines": {
-    "node":"14.x"
-  },
+  "main": "./dist/index.js",
   "scripts": {
-    "build":"tsc",
-    "start": "ts-node src/index.ts",
-    "start-dev": "nodemon ./src/index.ts",
+   "start": "node ./src/index.js",
+    "build": "tsc",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
